Implement the representation of Pareto sets, write tests for Pareto sets

--- a/csa/CMakeLists.txt
+++ b/csa/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(csa_lib
         config.hpp
         data_structure.cpp data_structure.hpp
-        csa.cpp csa.hpp)
+        csa.cpp csa.hpp
+        pareto_set.hpp)
 add_executable(csa
         main.cpp
         config.hpp
