Record the size of the result Pareto set of the target and the maximum size of the Pareto sets of every node

--- a/csa/CMakeLists.txt
+++ b/csa/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(csa_lib
         data_structure.cpp data_structure.hpp
         csa.cpp csa.hpp
         pareto_set.hpp
-        bag.hpp)
+        bag.cpp bag.hpp)
 add_executable(csa
         main.cpp
         config.hpp
