--- a/csa/CMakeLists.txt
+++ b/csa/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(csa csa_lib)
 target_link_libraries(csa z)
 set_target_properties(csa PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
 set_target_properties(csa_lib PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
+
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+target_link_libraries(csa_lib Threads::Threads)
