Fix project and target names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(raptor)
+project(csa)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -14,6 +14,6 @@ add_subdirectory(csa)
 
 OPTION(PROFILE "Profile code" OFF)
 if (PROFILE)
-    target_compile_definitions(raptor_lib PUBLIC -DPROFILE)
+    target_compile_definitions(csa_lib PUBLIC -DPROFILE)
     message("Turn on profiling code")
 endif (PROFILE)
